--- a/views/pages/meal_history.ejs
+++ b/views/pages/meal_history.ejs
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src ="/socket.io/socket.io.js"></script>
     <link rel="stylesheet" href="/styles.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <title>Meal History</title>
 </head>
 <body class="meal-history-page">
     <%- include('../partials/header') %>
-  
+    <%- include('../partials/message') %>
     <div class="container">
         <h1>Your Meal History</h1>
         <form action="/meals/history" method="GET" id="filterForm">
