--- a/views/pages/meal_history.ejs
+++ b/views/pages/meal_history.ejs
@@ -89,8 +89,7 @@
                 });
         });
 
-        const meals = '<%- JSON.stringify(meals) %>';
-
+        const meals = <%- JSON.stringify(meals) %>;
         const dates = meals.map(meal => meal.meal_date.split("T")[0]);
         const bloodSugarLevels = meals.map(meal => meal.bloodSugar);
 
