--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -3,15 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src ="/socket.io/socket.io.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
     <title>Login</title>
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
-    <!-- ייבוא ה-header -->
     <%- include('../partials/header') %>
 
-    <!-- לוגו גדול במרכז המסך -->
     <div class="login-logo">
       <img src="/images/logo.png" alt="Health App Logo" />
     </div>
@@ -39,12 +37,10 @@
         </a>
       </div>
     </div>
-
-    <!-- ייבוא ה-footer -->
     <%- include('../partials/footer') %>
 
     <script>
-      var isLoggedIn = false; // סימולציה של מצב התחברות
+      var isLoggedIn = false;
 
       document
         .getElementById("home-link")
