--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,5 +3,6 @@
   <div class="menu">
     <a href="/users/dashboard">Home</a>
     <a href="/users/about">About</a>
+    <a href="/users/logout">Log-out</a>
   </div>
 </nav>
