--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,7 @@
   <div class="logo">SugarWize</div>
   <div class="menu">
     <a href="/users/dashboard">Home</a>
-    <a href="/users/about">About</a>
-    <a href="/users/logout">Log-out</a>
+    <a href="/users/about">About Us</a>
+    <a href="/users/logout">Log out</a>
   </div>
 </nav>
