--- a/public/styles.css
+++ b/public/styles.css
@@ -1324,3 +1324,20 @@ ul {
   opacity: 0;
   transform: translateX(-50%) translateY(20px);
 }
+body.login-page .container {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  background-color: #f9f9f9;
+  border-radius: 8px;
+}
+body.signup-page .container {
+  max-width: 600px;
+
+  padding: 20px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  margin: 50px auto 0;
+}
