--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -7,7 +7,7 @@
     <script src="/socket.io/socket.io.js"></script>
     <title>About Us - <%= appName %></title>
   </head>
-  <%- include('../partials/header') %>
+  <%- include('../partials/header') %> <%- include('../partials/message') %>
   <body class="about-page">
     <div class="container">
       <h2>About <%= appName %></h2>
