--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -7,7 +7,7 @@
     <title>Sign Up</title>
     <link rel="stylesheet" href="/styles.css" />
   </head>
-  <body>
+  <body class="signup-page">
     <%- include('../partials/header') %>
     <div class="container">
       <h1>Create a New Account</h1>
