--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -7,7 +7,7 @@
     <title>Login</title>
     <link rel="stylesheet" href="/styles.css" />
   </head>
-  <body>
+  <body class="login-page">
     <%- include('../partials/header') %>
 
     <div class="login-logo">
