--- a/views/pages/meal_history.ejs
+++ b/views/pages/meal_history.ejs
@@ -43,7 +43,7 @@
                     <p>Description: <%= meal.description %></p>
                     <p>Blood Sugar: <%= meal.bloodSugar %></p>
                     <p>Food Sugar: <%= meal.foodSugar %></p>
-                    <p>Event: <%= meal.event %></p>
+                    <p>Special Day: <%= meal.event %></p>
                 </div>
                 <% }); %>
             </div>
