--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -15,7 +15,7 @@
       style="height: 40px; width: auto; height: 400px"
     />
     <div class="container">
-      <h1>Hello, <%= user.Name %>!</h1>
+      <h1>Hello <%= user.Name %>!</h1>
       <div class="button-container">
         <a href="/meals/update" class="buttonD">Update Meal</a>
         <a href="/meals/history" class="buttonD">View Meal History</a>
