delete chart button

--- a/views/pages/meal_history.ejs
+++ b/views/pages/meal_history.ejs
@@ -29,7 +29,7 @@
             </select>
 
             <button type="submit">Filter</button>
-            <button type="button" id="toggleView">Show Chart</button>
+            <!-- <button type="button" id="toggleView">Show Chart</button> -->
         </form>
 
         <% if (meals.length > 0) { %>
